<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CocSignUpActivity">
    <TextView
        android:id="@+id/sup_tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:fontFamily="@font/fauna_one"
        android:textColor="@color/colorPrimary"
        android:text="@string/sign_up_on_acaeply"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sup_tv_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        android:id="@+id/lin_one"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_back"
            android:drawablePadding="6dp"
            android:layout_margin="8dp"
            android:padding="14dp"
            android:layout_weight="3"
            android:fontFamily="@font/fauna_one"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email_color"
            android:hint="@string/email_hint"
            android:id="@+id/email_sup_app_edt"
            android:textSize="13sp"
            />




        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_back"
            android:drawablePadding="6dp"
            android:padding="14dp"
            android:layout_weight="3"
            android:textSize="13sp"
            android:layout_margin="8dp"
            android:hint="@string/password_hint"
            android:fontFamily="@font/fauna_one"
            android:id="@+id/pass_sup_app_edt"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password_icon"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/button_back"
            android:layout_weight="3"
            android:layout_margin="18dp"
            android:fontFamily="@font/fauna_one"
            android:text="@string/sign_up_profile"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:id="@+id/sign_upreg_btn"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_one"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dont_have_lab"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="12dp"
            android:layout_height="match_parent"

            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:text="@string/already_registered"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sign_inreg_lab"/>

        <TextView
            android:id="@+id/sign_inreg_lab"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="12dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:text="@string/sign_in_text"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>