<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AcapelyCreateMusicPlaylist">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cons_create_play"
        android:layout_margin="8dp"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/cons_create_play"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cons_create_play"
            app:layout_constraintStart_toStartOf="@id/cons_create_play"
            android:fontFamily="@font/fauna_one"
            android:id="@+id/tv_label_playlist"
            android:layout_margin="16dp"
            android:text="@string/register_your_playlist"
            android:gravity="center_horizontal" />


        <androidx.cardview.widget.CardView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:id="@+id/card_play_ico"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="18dp"
            app:cardCornerRadius="48dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            app:layout_constraintStart_toStartOf="@id/cons_create_play"
            app:layout_constraintEnd_toStartOf="@id/upload_play_lab"
            app:layout_constraintTop_toBottomOf="@id/tv_label_playlist"
            android:thicknessRatio="1.3"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:src="@drawable/ic_camera"
                android:id="@+id/img_playlist_icon_create"
                android:scaleType = "fitCenter"
                android:contentDescription="@string/app_name"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/upload_play_lab"
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/fauna_one"
            android:gravity="center_horizontal"
            android:text="@string/attach_picture"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/cons_create_play"
            app:layout_constraintLeft_toRightOf="@id/card_play_ico"
            app:layout_constraintRight_toRightOf="@id/cons_create_play"
            app:layout_constraintStart_toEndOf="@id/card_play_ico"
            app:layout_constraintTop_toBottomOf="@id/tv_label_playlist" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lin_play"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/cons_create_play"
            app:layout_constraintStart_toStartOf="@id/cons_create_play"
            app:layout_constraintBottom_toBottomOf="@id/cons_create_play"
            app:layout_constraintTop_toBottomOf="@id/card_play_ico">



            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edt_playlist_title"
                android:layout_margin="8dp"
                android:inputType="text"
                android:background="@drawable/edit_text_back"
                android:padding="14dp"
                android:drawableStart="@drawable/ic_edit_color"
                android:drawablePadding="6dp"
                android:fontFamily="@font/fauna_one"
                android:textSize="12sp"
                android:hint="@string/enter_artist_name"
                android:layout_weight="3"
                android:layout_height="0dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edt_playlist_id"
                android:inputType="text"
                android:padding="14dp"
                android:drawablePadding="6dp"
                android:layout_margin="8dp"
                android:fontFamily="@font/fauna_one"
                android:textSize="12sp"
                android:background="@drawable/edit_text_back"
                android:drawableStart="@drawable/ic_edit_color"
                android:hint="@string/enter_artist_id"
                android:layout_weight="3"
                android:layout_height="0dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textAlignment="textEnd"
                android:text="@string/learn_how_to_get_artist_id"
                android:layout_margin="8dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:textColor="@color/design_default_color_background"
                android:background="@drawable/button_back"
                android:text="@string/register_your_playlist"
                android:layout_margin="8dp"
                android:id="@+id/btn_create_play_main"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>